<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name" translatable="false">Teste De IMC</string>
    <string name="labelSexo">Sexo</string>
    <string name="labelNome">Nome</string>
    <string name="labelPeso">Peso</string>
    <string name="labelAltura">Altura</string>
    <string name="labelCalcularPercentual">Calcular</string>

    <string name="labelResultadoPercentualGordura">Resultados do Teste</string>
    <string name="labelTituloFormTeste">IMC - TESTE</string>
    <string name="labelBotaoVoltar">Voltar</string>

    <string name="contentDescriptionPeso">Peso(em quilos)</string>
    <string name="contentDescriptionAltura">Altura(em centímetros)</string>
    <string name="contentDescriptionNome">Seu nome</string>
    <string name="contentDescriptionTituloFormTeste">Cálculo de IMC</string>

    <string name="contentDescriptionSexo">Informe o sexo</string>
    <string name="contentDescriptionResultadosTestePercentualGordura">Resultado do teste de IMC</string>
    <string name="labelTextTitleResultTestPercentualGordura">Resultado do IMC</string>
    <string name="labelTextViewHeaderDensidadeCorporal">SEU IMC</string>
    <string name="seu_imc">Seu IMC:</string>
    <string name="seu_peso">Seu peso:</string>
    <string name="sua_altura">Sua altura:</string>
</resources>
