<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/scrollResultado"
    tools:context=".ResultActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="14dp"
        android:paddingRight="24dp"
        android:paddingBottom="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"

            android:layout_margin="6dp">

            <TextView
                android:id="@+id/textviewResultado"
                style="@style/styleTituloSecao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelResultadoPercentualGordura" />

        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardDensidadeCorporal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp">


                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <TextView
                            android:id="@+id/titleDensidadeCorporal"
                            style="@style/styleTituloSecao"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:contentDescription="@string/contentDescriptionResultadosTestePercentualGordura"
                            android:focusable="true"
                            android:text="@string/labelTextTitleResultTestPercentualGordura"
                            android:textAppearance="?attr/textAppearanceHeadline6" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/seu_imc"
                            android:textAlignment="viewStart"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txt_imc"
                            style="@style/styleHeaderResultado"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:labelFor="@id/titleDensidadeCorporal"
                            android:text="@string/seu_imc"
                            android:textAlignment="center"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="?android:attr/textColorPrimary" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/seu_peso"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txt_peso"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:focusable="true"
                            android:text=""
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="?android:attr/textColorSecondary" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/sua_altura"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txt_altura"
                            style="@style/styleValorResultado"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:focusable="true"
                            android:text=""
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="?android:attr/textColorSecondary" />
                    </TableRow>
                </TableLayout>

                <TextView
                    android:id="@+id/txt_result"
                    style="@style/styleValorResultado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:focusable="true"
                    android:text=""
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="3dp" >

            <Button
                android:id="@+id/btnFecharResultados"
                style="@style/styleContainedButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/labelBotaoVoltar" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>